
public interface MediaPlayer{
    void play(String audioType, String filename);
}

